pbapply package version history

Version 1.0-1, September 3, 2010
    * pbreplicate added

Version 1.0-0, September 2, 2010
    * first release